--- a/BOOKING-SERVICE.properties
+++ b/BOOKING-SERVICE.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://sweet-home.cwub5mro6hjf.us-east-1.rds.amazonaws.com:3306/sweetHome
 spring.datasource.username=admin
 spring.datasource.password=Prabhas2611
+
+payment.service.url=localhost:8083/
