--- a/PAYMENT-SERVICE.properties
+++ b/PAYMENT-SERVICE.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://sweet-home.cwub5mro6hjf.us-east-1.rds.amazona
 spring.datasource.username=admin
 spring.datasource.password=Prabhas2611
 spring.jpa.hibernate.ddl-auto=create
+spring.jackson.serialization.fail-on-empty-beans=false
