--- a/BOOKING-SERVICE.properties
+++ b/BOOKING-SERVICE.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://sweet-home.cwub5mro6hjf.us-east-1.rds.amazona
 spring.datasource.username=admin
 spring.datasource.password=Prabhas2611
 
-payment.service.url=localhost:8083/
+spring.jackson.serialization.fail-on-empty-beans=false
